# cs298multimodal

./: .gitignore  README.md  pyproject.toml  requirements.txt  result.json  setup.py
configs/: colab.yaml  default.yaml
scripts/: demo.py  preprocess_all.py  run_ablation.py  run_inference.py  train_end_to_end.py  train_fusion.py  train_pipeline_a.py  train_pipeline_b.py
src/data/: audio_utils.py  augmentation.py  collate.py  cremad_loader.py  dataset_registry.py  goemotions_loader.py  iemocap_loader.py  msp_improv_loader.py  ravdess_loader.py
src/evaluation/: __init__.py  ablation.py  cross_dataset.py  evaluator.py
src/features/: __init__.py  hubert_extractor.py  opensmile_baseline.py  prosodic.py  spectrogram.py  whisper_transcriber.py
src/models/fusion/: cross_modal_attention.py  gated_fusion.py  mera_model.py
src/models/pipeline_a/: attention_entropy.py  text_emotion_head.py  text_encoder.py
src/models/pipeline_b/: audio_emotion_head.py  cnn_bilstm.py  hubert_head.py  prosodic_tcn.py  squeeze_excitation.py
src/training/: early_stopping.py  losses.py  metrics.py  schedulers.py  trainer.py
src/utils/: checkpoint.py  config.py  device.py  logging_utils.py  seed.py
tests/: test_data_loaders.py  test_evaluation.py  test_feature_extraction.py  test_inference.py  test_models.py  test_training.py
